fix: bacground-foreground contrast, assets sizes reduced

--- a/css/animations.scss
+++ b/css/animations.scss
@@ -24,6 +24,7 @@
   height: 1em;
   border-radius: 50%;
   margin: 72px auto;
+  z-index: 4;
   position: relative;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
