--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@ a {
 }
 
 // VARIABLES
-$col-primary: #f68330;
+$col-primary: #dd5c00;
 $col-secondary: #53d8fb;
 $col-dark: #0e1214;
 $col-light: #ffffff;
@@ -386,9 +386,6 @@ ul a {
 .hero-section {
   width: 100vw;
   height: calc(100vh - 60px);
-  // margin: 0;
-  // padding: 0;
-  // box-sizing: border-box;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -407,7 +404,7 @@ ul a {
     width: 100%;
     height: 100%;
     position: relative;
-    opacity: 0.8;
+    opacity: 0.6;
     z-index: -1;
     overflow: hidden;
     video {
@@ -459,7 +456,7 @@ ul a {
     height: 580px;
     justify-content: center;
     align-items: center;
-    background-image: url("../assets/images/header-s.png");
+    background-image: url("../assets/images/header-s.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
